--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "deepmerge": "^0.2.10",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^3.2.1",
     "gulp-sourcemaps": "^1.6.0",
-    "jsondiffpatch": "^0.1.41",
+    "jsdom": "^8.5.0",
+    "mocha": "^2.4.5",
     "node-uuid": "^1.4.7",
     "requirejs": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
