--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.4",
     "babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-es2015-parameters": "^6.23.0",
+    "babel-preset-latest": "^6.22.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
