--- a/package.json
+++ b/package.json
@@ -26,8 +26,15 @@
     "requirejs": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "virtual-dom": "^2.1.1",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "browser-split": "0.0.1",
+    "error": "^4.3.0",
+    "ev-store": "^7.0.0",
+    "global": "^4.3.0",
+    "is-object": "^1.0.1",
+    "next-tick": "^0.2.2",
+    "x-is-array": "0.1.0",
+    "x-is-string": "0.1.0"
   },
   "author": "Andrew Kozlov <demerest@gmail.com>",
   "scripts": {
