--- a/package.json
+++ b/package.json
@@ -6,38 +6,45 @@
   "preferGlobal": "true",
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
     "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.6.5",
     "babel-plugin-transform-es2015-parameters": "^6.23.0",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-latest": "^6.22.0",
     "babelify": "^7.2.0",
+    "browser-split": "0.0.1",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "deepmerge": "^0.2.10",
+    "error": "^4.3.0",
+    "ev-store": "^7.0.0",
+    "global": "^4.3.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^3.2.1",
     "gulp-sourcemaps": "^1.6.0",
+    "is-object": "^1.0.1",
     "jsdom": "^8.5.0",
     "mocha": "^2.4.5",
+    "next-tick": "^0.2.2",
     "node-uuid": "^1.4.7",
     "requirejs": "^2.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0",
-    "browser-split": "0.0.1",
-    "error": "^4.3.0",
-    "ev-store": "^7.0.0",
-    "global": "^4.3.0",
-    "is-object": "^1.0.1",
-    "next-tick": "^0.2.2",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-module-hot-accept": "^1.0.4",
     "x-is-array": "0.1.0",
     "x-is-string": "0.1.0"
   },
   "author": "Andrew Kozlov <demerest@gmail.com>",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --reporter spec --require ./test/test_helper.js --recursive --watch"
+    "test": "mocha --compilers js:babel-core/register --reporter spec --require ./test/test_helper.js --recursive --watch",
+    "server": "./node_modules/.bin/webpack-dev-server --config ./webpack.config.js"
   }
 }
